--- a/sample.config.json
+++ b/sample.config.json
@@ -1,8 +1,6 @@
 {
     "projection_path": "projections.csv",
-    "ownership_path": "ownership.csv",
     "player_path": "player_ids.csv",
-    "boom_bust_path": "boom_bust.csv",
     "contest_structure_path": "contest_structure.csv",
     "projection_minimum": 5,
     "randomness": 100,
@@ -18,5 +16,6 @@
         "2": [["Justin Thomas", "Jordan Spieth", "Jon Rahm", "Brooks Koepka"]]
     },
     "min_lineup_salary": 49200,
-    "max_pct_off_optimal": 0.2
+    "max_pct_off_optimal": 0.2,
+    "cut_event": true
 }
