--- a/sample.config.json
+++ b/sample.config.json
@@ -15,6 +15,13 @@
         ],
         "2": [["Justin Thomas", "Jordan Spieth", "Jon Rahm", "Brooks Koepka"]]
     },
+    "exactly": {
+        "1": [
+            ["Justin Thomas", "Jordan Spieth"],
+            ["Jon Rahm", "Brooks Koepka"]
+        ],
+        "2": [["Justin Thomas", "Jordan Spieth", "Jon Rahm", "Brooks Koepka"]]
+    },
     "min_lineup_salary": 49200,
     "max_pct_off_optimal": 0.2,
     "cut_event": true
